[package]
name = "ludum_dare_40"
version = "0.1.0"
authors = ["zack <zwparchman@gmail.com>"]

[dependencies]
libc = "*"
lazy_static = "*"
cached = "0.4.1"
nalgebra = "0.13.1"
hibitset = "*"
synth = "*"

quickersort = "3.0"
rand = "0.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
debug = true
lto = true
